refactor ParamSymbol to Argument